plugins {
    id "java"
}

sourceCompatibility = "14"

repositories {
    jcenter()
}

dependencies {
    testImplementation "org.assertj:assertj-core:3.11.1"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    jvmArgs "--enable-preview"
}

test {
    useJUnitPlatform()
}